--- a/sass/Base/_body.scss
+++ b/sass/Base/_body.scss
@@ -44,7 +44,7 @@ li {
     right: 0;
     margin: auto;
     opacity: 0;
-    z-index: 2;
+    z-index: -2;
     position: fixed;
 }
 
@@ -93,14 +93,21 @@ li {
     0% {
         transform: rotate(0deg);
         opacity: 1;
+        z-index: 2;
 
     }
 
+    99% {
+        
+        z-index: 2;
+    }
+
+          
+       
     100% {
         transform: rotate(360deg);
         opacity: 1;
-
-
+        z-index: -2;
     }
 
 
