--- a/sass/Layouts/_footer.scss
+++ b/sass/Layouts/_footer.scss
@@ -68,3 +68,10 @@ footer {
         }
     }
 }
+footer li a{
+    color: white;
+    text-decoration: none;
+    &:hover{
+        color: white;
+    }
+}
