add mailto and correct bug reduc plat

--- a/sass/Layouts/_restaurant.scss
+++ b/sass/Layouts/_restaurant.scss
@@ -229,7 +229,7 @@
     }
 
     to {
-        padding-right: 40vw;
+        width: 60%;
     }
 }
 
@@ -241,11 +241,7 @@
     white-space: nowrap;
     padding-top: 1.5vw;
     padding-bottom: 1.5vw;
-    @media all and (min-width: 1024px) {
-       
-       
-     }
-   
+  
   
 }
 
