--- a/sass/Layouts/_menue.scss
+++ b/sass/Layouts/_menue.scss
@@ -1,7 +1,9 @@
 .title-menue {
     padding-left: 4vw;
     padding-bottom: 2vw;
+    padding: 7vw 0 2vw 4vw;
     font-size: 4vw;
+    font-weight: 400;
 
     @media screen and(min-width : 1024px) {
         font-size: 1.5vw;
