--- a/sass/Layouts/_menue.scss
+++ b/sass/Layouts/_menue.scss
@@ -123,6 +123,7 @@
     margin: auto;
     margin-top: 10vw;
     margin-bottom: 10vw;
+    cursor:pointer;
 
     @media screen and(min-width : 1024px) {
         margin-top: 5vw;
