--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,8 +127,8 @@ header img {
 }
 @media all and (min-width: 1024px) {
   header img {
-    width: 30%;
-    margin: 0;
+    width: 18%;
+    margin: auto;
     padding: 1vw;
   }
 }
@@ -151,6 +151,7 @@ header img {
   display: block;
   background-color: rgb(240, 240, 240);
   padding: 3vw;
+  margin-bottom: 30px;
 }
 @media all and (min-width: 1024px) {
   .search_town {
@@ -164,9 +165,13 @@ header img {
   font-size: 4vw;
   margin: 0;
 }
+@media all and (min-width: 1024px) {
+  .search_town i {
+    font-size: 2vw;
+  }
+}
 .search_town input {
-  font-size: 4vw;
-  text-align: center;
+  font-size: 3vw;
   background-color: rgb(240, 240, 240);
   color: black;
   opacity: 1;
@@ -175,6 +180,12 @@ header img {
   background: none;
   cursor: pointer;
 }
+@media all and (min-width: 1024px) {
+  .search_town input {
+    font-size: 2vw;
+    text-align: center;
+  }
+}
 .search h1 {
   font-size: 6vw;
   padding: 3% 15% 0 15%;
@@ -182,8 +193,9 @@ header img {
 @media all and (min-width: 1024px) {
   .search h1 {
     padding: 0;
-    font-size: 3vw;
+    font-size: 1.6vw;
     margin: 0;
+    margin-bottom: 10px;
   }
 }
 .search h2 {
@@ -195,8 +207,9 @@ header img {
 @media all and (min-width: 1024px) {
   .search h2 {
     padding: 0;
-    font-size: 2vw;
+    font-size: 1.5vw;
     margin: 0;
+    margin-bottom: 10px;
   }
 }
 .search form button {
@@ -212,6 +225,7 @@ header img {
   background: linear-gradient(180deg, #FF79DA, #9356DC);
   box-shadow: 1vw 1vw 1vw lightgrey;
   cursor: pointer;
+  margin-bottom: 20px;
 }
 .search form button:hover {
   box-shadow: 1vw 2vw 1vw lightgrey;
@@ -665,7 +679,8 @@ footer li a:hover {
 }
 @media screen and (min-width: 1024px) {
   .fa-arrow-left {
-    padding: 1vw 0vw 0 93vw;
+    padding: 1vw 0vw 0 1vw;
+    font-size: 3vw;
   }
 }
 
@@ -678,6 +693,7 @@ footer li a:hover {
   width: 100%;
   height: 70VW;
   object-fit: cover;
+  margin: auto;
 }
 @media screen and (min-width: 1024px) {
   .entete img {
