--- a/sass/Layouts/_entete-menue.scss
+++ b/sass/Layouts/_entete-menue.scss
@@ -8,7 +8,8 @@
     font-size: 5vw;
 padding: 5vw 0 0 4vw;
 @media screen and(min-width : 1024px) {
-    padding: 1vw 0vw 0 93vw;
+    padding: 1vw 0vw 0 1vw;
+    font-size: 3vw;
   }
 }
 .entete{
@@ -21,6 +22,7 @@ padding: 5vw 0 0 4vw;
        width: 100%;
        height:70VW;
        object-fit: cover;
+       margin: auto;
        @media screen and(min-width : 1024px) {
         height:20VW;
       }
