--- a/sass/Layouts/_header.scss
+++ b/sass/Layouts/_header.scss
@@ -13,9 +13,10 @@ header img{
     padding:1em;
     @media all and (min-width: 1024px)
 {
-        width: 30%;
-        margin: 0;
+        width: 18%;
+        margin: auto;
         padding: 1vw;
+
     }
 }
 
