--- a/sass/Layouts/_search.scss
+++ b/sass/Layouts/_search.scss
@@ -8,12 +8,14 @@
 {
         background-color:rgb(240, 240, 240) ;
         border-radius: 2vw;   
-        padding-bottom:0;       
+        padding-bottom:0;
+      
     }
     &_town {
         display: block;
         background-color: rgb(240, 240, 240);
         padding: 3vw;
+        margin-bottom: 30px;
         @media all and (min-width: 1024px)
 {
             padding: 0;
@@ -27,12 +29,12 @@
             margin: 0;
             @media all and (min-width: 1024px)
 {
-               
+    font-size: 2vw;
+                  
             }
         }
         & input{
-            font-size: 4vw;
-            text-align: center;
+            font-size: 3vw;
             background-color:rgb(240, 240, 240) ;
             color: black;
             opacity: 1;
@@ -40,18 +42,26 @@
             position: relative;
             background:none;
             cursor:pointer;
+            @media all and (min-width: 1024px)
+            {
+                font-size: 2vw;
+                text-align: center;
+                
+                        }
            
            
         }
     }
     & h1{
+
         font-size: 6vw;
         padding:3% 15% 0 15%;
         @media all and (min-width: 1024px)
 {
             padding:0;  
-            font-size: 3vw;
+            font-size: 1.6vw;
             margin: 0;    
+            margin-bottom: 10px;
         }
     }
     & h2{
@@ -62,13 +72,17 @@
         @media all and (min-width: 1024px)
 {
             padding:0;  
-            font-size: 2vw;
-            margin: 0;    
+            font-size: 1.5vw;
+            margin: 0;  
+            margin-bottom: 10px;  
         }
     }
     & form button{
        @include buttom;
        cursor:pointer;
+       margin-bottom: 20px;  
+         
+       
     }
 
 }
